refactor: migrate to go-telegram/bot library
- Remove custom HTTPClient wrapper and use go-telegram/bot directly
- Remove internal/telegram/http.go, http_test.go, client.go
- Remove internal/bot/updates.go and dispatcher.go
- Remove internal/quotes/adapter.go
- Update handlers to use *bot.Bot directly
- Update main.go to use bot.Start() and native handler registration
- Update all tests for new architecture
- Add storage/migrations.go for database migrations
- Add bot/middleware/ for chat filtering
- Update docker-compose.yml and config/prod.yaml

--- a/config/prod.yaml
+++ b/config/prod.yaml
@@ -5,12 +5,10 @@ telegram:
   webhook: ""
 
 database:
-  host: localhost
+  host: postgres
   port: 5432
   user: wanon
-  password: ""
-  database: wanon_prod
-  sslmode: require
+  password: wanon
+  database: wanon
+  sslmode: prefer
 
-cache:
-  max_age: 86400
