feat: auto-leave unauthorized chats
Add configurable auto-leave functionality for chats not in the allowed list.

Changes:
- Add AutoLeaveUnauthorized config option (default: false)
- Update ChatFilter middleware to call LeaveChat for unauthorized chats
- Update all config samples with new security settings
- Add tests for auto-leave behavior

Usage:
  export WANON_AUTO_LEAVE_UNAUTHORIZED=true
  export WANON_ALLOWED_CHAT_IDS=-1001234567890,-1009876543210

--- a/config/prod.yaml
+++ b/config/prod.yaml
@@ -12,3 +12,7 @@ database:
   database: wanon
   sslmode: prefer
 
+# Security: Automatically leave chats not in allowed_chat_ids
+auto_leave_unauthorized: false
+allowed_chat_ids: []
+
