--- a/config/test.yaml
+++ b/config/test.yaml
@@ -14,3 +14,7 @@ database:
 
 cache:
   max_age: 3600
+
+# Security: Automatically leave chats not in allowed_chat_ids
+auto_leave_unauthorized: false
+allowed_chat_ids: []
