--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
@@ -29,7 +32,7 @@ jobs:
         run: go install github.com/jackc/tern/v2@latest
 
       - name: Run tests
-        run: go test ./...
+        run: go test -timeout 10m ./...
 
   build-and-push:
     needs: test
